# python-learning

./: .gitignore  README.md  day01_hello.py  day02_chat.py  day03_if.py  day04_loop.py  day05_list.py  day06_dict.py  day07_function.py  day08_file.py  day09_json.py  day09_json_v2.py  day10_class.py  day10_student_manager.py  pyproject.toml  requirements.txt  student_manager_v2.py
.github/workflows/: python-tests.yml
notes/: day01.md
student_system/: main.py  manager.py  student.py
tests/: test_manager.py  test_student.py
